# MagnetoPong

./: CMakeLists.txt  SConstruct  example-config.py
Debug/: CMakeLists.txt  MagnetoPong.ini
Debug/configs/: magnetopong.xml
src/: Application.cpp  Application.h  Ball.cpp  Ball.h  Bat.cpp  Bat.h  BoostBar.cpp  BoostBar.h  CMakeLists.txt  Calculation.cpp  Calculation.h  Demo.cpp  Demo.h  DepthWindow.cpp  DepthWindow.h  Entity.cpp  Entity.h  HTPLAY  HandFinder.cpp  HandFinder.h  InputDevice.cpp  InputDevice.h  KinectInputDevice.cpp  KinectInputDevice.h  MagnetoEngine.cpp  MagnetoEngine.h  Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h  MouseInputDevice.cpp  MouseInputDevice.h  OnScreenMessage.cpp  OnScreenMessage.h  OnScreenMessageList.cpp  OnScreenMessageList.h  OpenNi.cpp  OpenNi.h  Player.cpp  Player.h  (+21 more)
src/CMake/: FindClanLib.cmake  FindOpenNI.cmake
src/configs/: magnetopong.xml
